// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorsViews ErrorsStatusbar displays error 1`] = `
<div>
  <div
    class="sc-bdVaJa kwzqrW"
  >
    <span
      class="sc-cvbbAY ektfEp"
      title="Test.Error: Test error description"
    >
      <i
        class="sc-jbKcbu jOwlWQ fa fa-exclamation-triangle"
      />
       
      Test.Error: Test error description
    </span>
  </div>
</div>
`;

exports[`ErrorsViews ErrorsStatusbar displays nothing if no error 1`] = `<div />`;

exports[`ErrorsViews ErrorsView displays nothing if no errors 1`] = `<div />`;

exports[`ErrorsViews ErrorsView displays procedure link if unknown procedure 1`] = `
<div>
  <div
    class="sc-cSHVUG eEUsMZ"
  >
    <div
      class="sc-kAzzGY hamzRh"
    >
      <div
        class="sc-chPdSV cpJGkg"
      >
        <div
          class="sc-dxgOiQ sc-jKJlTe eTYTbE"
        >
          ERROR
        </div>
        <h4
          class="sc-iAyFgw kWLHyT"
        >
          Neo.ClientError.Procedure.ProcedureNotFound
        </h4>
      </div>
      <div
        class="sc-kgoBCf kVSTZj"
      >
        <pre
          class="sc-eHgmQL aaOit"
        >
          not found
        </pre>
      </div>
      <div
        class="sc-kpOJdX jBWivS"
      >
        <a
          class="sc-kGXeez hbrWav"
        >
          <i
            class="sc-kvZOFW hmQuaT fa fa-play-circle-o"
          />
           List available procedures
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`ErrorsViews ErrorsView does displays an error 1`] = `
<div>
  <div
    class="sc-cSHVUG eEUsMZ"
  >
    <div
      class="sc-kAzzGY hamzRh"
    >
      <div
        class="sc-chPdSV cpJGkg"
      >
        <div
          class="sc-dxgOiQ sc-jKJlTe eTYTbE"
        >
          ERROR
        </div>
        <h4
          class="sc-iAyFgw kWLHyT"
        >
          Test.Error
        </h4>
      </div>
      <div
        class="sc-kgoBCf kVSTZj"
      >
        <pre
          class="sc-eHgmQL aaOit"
        >
          Test error description
        </pre>
      </div>
    </div>
  </div>
</div>
`;
